improve css and templates.

--- a/statics/css/common/layout.less
+++ b/statics/css/common/layout.less
@@ -19,6 +19,14 @@ body {
     clip: rect(1px, 1px, 1px, 1px);
 }
 
+// float
+.float-right {
+    float: right;
+}
+.float-left {
+    float: left;
+}
+
 #overlay {
     display: none;
     position: fixed;
