--- a/statics/css/librairy/palette.less
+++ b/statics/css/librairy/palette.less
@@ -14,3 +14,16 @@
 @lib-submenus-inframe: #383838; // inside frame color for submenus borders
 @lib-submenus-frame: #000; // submenus main borders
 @lib-submenus-outframe: #3F3F3F; // submenus out borders
+@lib-submenus-bg: #505050; // submenus background
+@lib-tabs: #989898; // tab items text and arrows
+@lib-tabs-hover: #CCCCCC; // tab items text and arrows hover
+@lib-content-bg: #313131; // main area background
+@lib-thumb-bg: #666666; // thumb article background
+@lib-thumb-shadow: #000000; // thumb article background
+@lib-thumb-header-border-top: #838383; // thumb article header top border
+@lib-thumb-header-border-bottom: #444444; // thumb article header bottom border
+@lib-thumb-header-bg: #737373; // thumb article header background
+@lib-thumb-header-line1: #222222; // thumb article header first line
+@lib-thumb-header-line2: #474747; // thumb article header second line
+@lib-thumb-img-border: #000; // thumb article border arround image
+@lib-thumb-img-shadow: #444444; // thumb article shadow arround image
