--- a/statics/partials/librairy/librairy_recursive_directorys.html
+++ b/statics/partials/librairy/librairy_recursive_directorys.html
@@ -1,6 +1,6 @@
 <a class="doc"
-    ui-sref="librairy.list({source: 'folder', pk: item.pk})"
-    ng-class="{active: $state.includes('librairy.list', {source: 'folder', pk: item.pk})}"
+    ui-sref="librairy.grid({source: 'folder', pk: item.pk})"
+    ng-class="{active: $state.includes('librairy.grid', {source: 'folder', pk: item.pk})}"
     href="">{{ item.name }}</a>
 <ul ng-if="item.children">
     <li ng-repeat="item in item.children" ng-include="'/assets/partials/librairy/librairy_recursive_directorys.html'"></li>
