--- a/statics/partials/librairy/librairy_single.html
+++ b/statics/partials/librairy/librairy_single.html
@@ -1,5 +1,6 @@
 <img ng-src="/media/images/previews/large/{{ pict.previews_path }}"
      alt="{{ pict.title }}" />
+{{ $scope.picts }}
 <menu type="toolbar"
     ng-hide="hide_toolbar">
     <button id="grid" 
