--- a/statics/css/controller.less
+++ b/statics/css/controller.less
@@ -54,6 +54,9 @@
 // mixins
 @import '@{base-css}common/mixins.less';
 
+// sprite
+@import '@{base-css}common/sprite.less';
+
 
 // forms
 @import '@{base-css}common/forms.less';
