--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -171,15 +171,15 @@ body#librairy {
                 float: right;
                 text-indent: 0px;
                 margin: 0 15px 0 0;
-                //.out-screen;
+                .out-screen;
                 &:before {
                     top: 8px;
-                    //.sprite-padded(22, @line2, @grid2, 21px, 17px);
+                    .sprite-padded(22, @line2, @grid2, 21px, 17px);
                 }
                 &:hover, &:focus {
                     &:before {
                         top: 8px;
-                        //.sprite-padded(24, @line2, @grid2, 21px, 17px);
+                        .sprite-padded(24, @line2, @grid2, 21px, 17px);
                     }
                 }
             }
@@ -204,7 +204,7 @@ body#librairy {
     section#content {
         position: absolute;
         overflow: auto;
-        overflow-x:hidden;
+        overflow-x: hidden;
         top: 3px;
         right: 3px;
         bottom: 3px;
@@ -307,14 +307,26 @@ body#librairy {
                 vertical-align: middle;
                 ul li {
                     display: inline-block;
-                    height: 25px;
+                    //height: 25px;
+                    //width: 25px;
+                }
+                button {
+                    margin: 0;
+                    padding: 0;
+                    display: inline-block;
                     width: 25px;
+                    height: 25px;
+                    min-width: 0;
+                    border: none;
+                    border-radius: 0;
+                    box-shadow: none;
                 }
-                a.point {
-                    //.sprite-replace(28, @line2, @grid2);
+
+                button.point {
+                    .sprite-replace(28, @line2, @grid2);
                 }
-                a.star {
-                    //.sprite-replace(26, @line2, @grid2);
+                button.star {
+                    .sprite-replace(26, @line2, @grid2);
                 }
             }
         } // article.thumb
