--- a/statics/css/librairy/palette.less
+++ b/statics/css/librairy/palette.less
@@ -27,3 +27,8 @@
 @lib-thumb-header-line2: #474747; // thumb article header second line
 @lib-thumb-img-border: #000; // thumb article border arround image
 @lib-thumb-img-shadow: #444444; // thumb article shadow arround image
+@lib-submenu-hover-bg: #585858; // submenu links background on hover
+@lib-submenu-hover: #FFFFFFF; // submenu links color on hover
+@lib-submenu-active-bg: #CBCBCB; // submenu links background when active
+@lib-submenu-active: #000000; // submenu links color when active
+@lib-filter-bar-bg: #666666; // filter-bar background color
