add drop directive.

--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -214,7 +214,7 @@ body#librairy {
                         background-color: @lib-submenu-hover-bg;
                         color: @lib-submenu-hover;
                     }
-                    &:active, &.active {
+                    &:active, &.active, &.droppable {
                         background-color: @lib-submenu-active-bg;
                         color: @lib-submenu-active;
                     }
