--- a/statics/partials/librairy/librairy_grid.html
+++ b/statics/partials/librairy/librairy_grid.html
@@ -30,7 +30,7 @@
         <!-- image itself wrapper, for published icone to be at right place -->
         <div>
             <img class="thumbnail"
-                 ph-drag="pict"
+                 ph-drag="pict/pk"
                  drag-data="{{ pict.pk }}"
                  drag-effect="all"
                  drag-style="selected"
