improve phPatcher service: no more request if no change in given datas.

--- a/statics/partials/librairy/librairy_grid.html
+++ b/statics/partials/librairy/librairy_grid.html
@@ -31,7 +31,7 @@
         <div>
             <img class="thumbnail"
                  ph-drag="librairy/pict"
-                 drag-data="{{ pict }}"
+                 drag-data="pict"
                  drag-style="selected"
                  ng-src="/media/images/previews/max-500/{{ pict.previews_path }}"
                  ng-dblclick="$state.go('.single', {'picture': pict.pk})"
