--- a/statics/partials/librairy/librairy_recursive_directorys.html
+++ b/statics/partials/librairy/librairy_recursive_directorys.html
@@ -1,6 +1,9 @@
 <a class="doc"
     ui-sref="librairy.grid({source: 'folder', pk: item.pk})"
     ng-class="{active: $state.includes('librairy.grid', {source: 'folder', pk: item.pk})}"
+    ph-drag="librairy/folder"
+    drag-data="item"
+    drag-style="active"
     ph-drop="librairy/folder"
     drop-data="{{ item }}"
     drop-accept="librairy/pict librairy/folder"
