--- a/statics/partials/librairy/librairy_base.html
+++ b/statics/partials/librairy/librairy_base.html
@@ -48,7 +48,7 @@
                     <!-- <li><a class="doc" ui-sref="librairy.grid({source: 'folder', pk: '-'})">Last importation</a></li>-->
                     <li><a class="doc"
                             ph-drop="librairy/folder"
-                            drop-data="-"
+                            drop-data="'-'"
                             drop-accept="librairy/pict librairy/folder"
                             drop-style="droppable"
                             ui-sref="librairy.grid({source: 'folder', pk: '-'})"
