--- a/statics/partials/librairy/librairy_recursive_directorys.html
+++ b/statics/partials/librairy/librairy_recursive_directorys.html
@@ -2,12 +2,12 @@
     ui-sref="librairy.grid({source: 'folder', pk: item.pk})"
     ng-class="{active: $state.includes('librairy.grid', {source: 'folder', pk: item.pk})}"
     ph-drag="librairy/folder"
-    drag-data="item"
-    drag-style="active"
+    ph-drag-data="{{ item.pk }}"
+    ph-drag-style="active"
     ph-drop="librairy/folder"
-    drop-data="{{ item }}"
-    drop-accept="librairy/pict librairy/folder"
-    drop-style="droppable"
+    ph-drop-data="{{ item.pk }}"
+    ph-drop-accept="librairy/pict librairy/folder"
+    ph-drop-style="droppable"
     >{{ item.name }}</a>
 <ul ng-if="item.children">
     <li ng-repeat="item in item.children" ng-include="'/assets/partials/librairy/librairy_recursive_directorys.html'"></li>
