improve drag & drop controller.

--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -198,10 +198,14 @@ body#librairy {
         }
         ul.submenu {
             background-color: @lib-submenus-bg;
+            > li {
+                padding-left: 0px;
+            }
             li {
                 min-height: 20px;
                 display: block;
                 //padding: 1px 0;
+                padding-left: 10px;
                 a {
                     display: block;
                     height: 18px;
