--- a/statics/partials/librairy/librairy_base.html
+++ b/statics/partials/librairy/librairy_base.html
@@ -48,12 +48,12 @@
                     <!-- <li><a class="doc" ui-sref="librairy.grid({source: 'folder', pk: '-'})">Last importation</a></li>-->
                     <li><a class="doc"
                             ph-drop="librairy/folder"
-                            ph-drop-data="'-'"
+                            ph-drop-data="rootDir"
                             ph-drop-accept="librairy/pict librairy/folder"
                             ph-drop-style="droppable"
                             ui-sref="librairy.grid({source: 'folder', pk: '-'})"
                             ng-class="{active: $state.includes('librairy.grid', {source: 'folder', pk: item.pk})}"
-                            >Folder less</a></li>
+                            >{{ rootDir.name }}</a></li>
                 </ul><!-- submenu -->
                 </div><!-- submenu-inframe -->
                 </div><!-- submenu-frame -->
