--- a/statics/partials/librairy/librairy_recursive_directorys.html
+++ b/statics/partials/librairy/librairy_recursive_directorys.html
@@ -2,10 +2,10 @@
     ui-sref="librairy.grid({source: 'folder', pk: item.pk})"
     ng-class="{active: $state.includes('librairy.grid', {source: 'folder', pk: item.pk})}"
     ph-drag="librairy/folder"
-    ph-drag-data="{{ item.pk }}"
+    ph-drag-data="item"
     ph-drag-style="active"
     ph-drop="librairy/folder"
-    ph-drop-data="{{ item.pk }}"
+    ph-drop-data="item"
     ph-drop-accept="librairy/pict librairy/folder"
     ph-drop-style="droppable"
     >{{ item.name }}</a>
